--- a/src/Squidd.Commander.Web/Views/Runner/Index.cshtml
+++ b/src/Squidd.Commander.Web/Views/Runner/Index.cshtml
@@ -2,9 +2,93 @@
 
 @{
     ViewBag.Title = "All Runners";
+    Layout = "~/Views/Shared/_modern.cshtml";
 }
 
-<h2>All Runners</h2>
+@section styles {
+    @Styles.Render("~/Content/runners-css")
+}
+
+@section primarybuttons
+{
+    <div class="primary-buttons"><button class="btn btn-primary">+</button></div>
+}
+
+<div class="sort-by">
+    Sort by:
+    <div class="btn-group ">
+        <button type="button" class="btn btn-sm btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Location
+        </button>
+        <div class="dropdown-menu dropdown-menu-right">
+            <a class="dropdown-item" href="#">Friendly Name</a>
+            <a class="dropdown-item" href="#">Computer Name</a>
+        </div>
+    </div>
+</div>
+<br class="clearfix" />
+
+<h4>UK South</h4>
+<div class="row">
+    <div class="col-md-6">
+        <div class="card text-center runner-card">
+            <div class="card-header">
+                Primary Web Server
+            </div>
+            <div class="card-block">
+                <i class="fa fa-globe"></i>
+                <h5 class="card-title">WebServer01</h5>
+                <ul class="card-text list-unstyled">
+                    <li>Windows Server 2012 R2</li>
+                    <li>12.34.456.78</li>
+                </ul>
+            </div>
+            <div class="card-footer text-muted">
+                Last contact: 2 days ago
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="card text-center runner-card">
+            <div class="card-header">
+                Secondary Web Server
+            </div>
+            <div class="card-block">
+                <i class="fa fa-globe"></i>
+                <h5 class="card-title">WebServer02</h5>
+                <ul class="card-text list-unstyled">
+                    <li>Windows Server 2012 R2</li>
+                    <li>12.34.456.78</li>
+                </ul>
+            </div>
+            <div class="card-footer text-muted">
+                Last contact: 2 days ago
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="card text-center runner-card">
+            <div class="card-header">
+                Backup Server
+            </div>
+            <div class="card-block">
+                <i class="fa fa-hdd-o"></i>
+                <h5 class="card-title">UKSOUTH-bkp</h5>
+                <ul class="card-text list-unstyled">
+                    <li>Windows Server 2012 R2</li>
+                    <li>12.34.456.78</li>
+                </ul>
+            </div>
+            <div class="card-footer text-muted">
+                Last contact: 2 days ago
+            </div>
+        </div>
+    </div>
+</div>
+<h4>France Central</h4>
+<div class="row"></div>
+<h4>US West</h4>
+<div class="row"></div>
 
 <ul>
     @foreach (var runner in Model.Runners)
