--- a/src/Squidd.Commander.Web/Content/theme.scss
+++ b/src/Squidd.Commander.Web/Content/theme.scss
@@ -1,31 +1,33 @@
-﻿.btn {
+﻿@import "_colors";
+
+.btn {
     min-width: 36px;
     cursor: pointer;
 }
 
 .btn-primary {
-    background-color: #387ebe;
-    border-color: #26639b;
+    background-color: $primary-theme-color;
+    border-color: darken($primary-theme-color, 5%);
 
     &:hover {
-        background-color: lighten(#387ebe,5%);
+        background-color: lighten($primary-theme-color,5%);
     }
 }
 
 .btn-info {
-    background-color: #5a495b;
+    background-color: $muted-theme-color;
     color: white;
-    border-color: lighten(#5a495b,5%);
+    border-color: lighten($muted-theme-color,5%);
 
     &:hover {
-        background-color: lighten(#5a495b,5%);
-        border-color: #26639b;
+        background-color: lighten($muted-theme-color,5%);
+        border-color: $muted-theme-color;
         border-width: 1px;
     }
 
     .show &.dropdown-toggle {
         background-color: #387ebe;
-        border-color: #26639b;
+        border-color: $muted-theme-color;
         border-width: 1px;
     }
 
