--- a/src/Squidd.Commander.Web/Content/Site.scss
+++ b/src/Squidd.Commander.Web/Content/Site.scss
@@ -18,7 +18,6 @@ body {
 
     ul {
 
-
         & > li {
             margin: 0 0 0.5rem 0;
 
@@ -86,3 +85,25 @@ body {
 hr {
     border-top: 1px solid #434857
 }
+
+/*#region bootstrap changes */
+@media screen and (min-width: 768px) {
+    .modal.center {
+        text-align: center;
+
+        &:before {
+            display: inline-block;
+            vertical-align: middle;
+            content: " ";
+            height: 100%;
+        }
+
+        .modal-dialog {
+            display: inline-block;
+            text-align: left;
+            vertical-align: middle;
+        }
+    }
+}
+
+/*#endregion */
