--- a/src/Squidd.Commander.Web/Views/Runner/Index.cshtml
+++ b/src/Squidd.Commander.Web/Views/Runner/Index.cshtml
@@ -11,7 +11,8 @@
 
 @section primarybuttons
 {
-    <div class="primary-buttons"><button class="btn btn-primary">+</button></div>
+    <div class="primary-buttons"><button class="btn btn-primary" data-toggle="modal" data-target="#addRunnerModal"><i class="fa fa-plus"></i></button></div>
+
 }
 
 <div class="sort-by">
@@ -96,3 +97,5 @@
         <li>@runner.ComputerName (@runner.EndPoint)</li>
     }
 </ul>
+
+@Html.Partial("_AddRunnerModal")
