--- a/src/Squidd.Commander.Web/Views/Runner/Index.cshtml
+++ b/src/Squidd.Commander.Web/Views/Runner/Index.cshtml
@@ -14,7 +14,7 @@
     <div class="primary-buttons"><button class="btn btn-primary" data-toggle="modal" data-target="#addRunnerModal"><i class="fa fa-plus"></i></button></div>
 
 }
-
+<my-app>Loading...</my-app>
 <div class="sort-by">
     Sort by:
     <div class="btn-group ">
