--- a/src/Squidd.Commander.Web/Views/Shared/_Modern.cshtml
+++ b/src/Squidd.Commander.Web/Views/Shared/_Modern.cshtml
@@ -32,7 +32,7 @@
         <div class="row">
             <div class="col-md-3">
                 <nav class="left-nav">
-                    <p class="site-logo">SQUIDD</p>
+                    <p class="site-logo"><img src="~/Images/logo-white.svg" style="width: 100%" /></p>
                     <ul class="list-unstyled">
                         <li class="nav-header">System</li>
                         <li><a href="#">Dashboard</a></li>
