--- a/src/Squidd.Commander.Web/Content/Site.css
+++ b/src/Squidd.Commander.Web/Content/Site.css
@@ -1,4 +1,12 @@
 ﻿body {
+  background: #25323E;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #25323E, #C33764);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(330deg, #25323E 70%, #C33764);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   padding-top: 50px;
   padding-bottom: 20px;
   background-color: #25323E;
@@ -8,8 +16,8 @@
   font-weight: 300; }
 
 .left-nav .site-logo {
-  font-size: 2rem;
-  font-weight: 700; }
+  padding-left: 1rem;
+  width: 100%; }
 
 .left-nav ul > li {
   margin: 0 0 0.5rem 0; }
