--- a/src/Squidd.Commander.Web/Views/Runner/Index.cshtml
+++ b/src/Squidd.Commander.Web/Views/Runner/Index.cshtml
@@ -14,7 +14,6 @@
     <div class="primary-buttons"><button class="btn btn-primary" data-toggle="modal" data-target="#addRunnerModal"><i class="fa fa-plus"></i></button></div>
 
 }
-<my-app>Loading...</my-app>
 <div class="sort-by">
     Sort by:
     <div class="btn-group ">
@@ -28,27 +27,9 @@
     </div>
 </div>
 <br class="clearfix" />
+<all-runners>Loading...</all-runners>
 
-<h4>UK South</h4>
 <div class="row">
-    <div class="col-md-6">
-        <div class="card text-center runner-card">
-            <div class="card-header">
-                Primary Web Server
-            </div>
-            <div class="card-block">
-                <i class="fa fa-globe"></i>
-                <h5 class="card-title">WebServer01</h5>
-                <ul class="card-text list-unstyled">
-                    <li>Windows Server 2012 R2</li>
-                    <li>12.34.456.78</li>
-                </ul>
-            </div>
-            <div class="card-footer text-muted">
-                Last contact: 2 days ago
-            </div>
-        </div>
-    </div>
     <div class="col-md-6">
         <div class="card text-center runner-card">
             <div class="card-header">
